samples/aspenmesh/bookinfo-traffic-generator.yaml
apiVersion: v1
kind: Service
metadata:
  name: traffic-generator-productpage
  labels:
    app: traffic-generator-productpage
spec:
  ports:
  - port: 80
    name: http
  selector:
    app: traffic-generator-productpage
---
apiVersion: apps/v1
kind: Deployment
metadata:
  name: traffic-generator-productpage
spec:
  replicas: 1
  selector:
    matchLabels:
      app: traffic-generator-productpage
  template:
    metadata:
      labels:
        app: traffic-generator-productpage
      annotations:
        sidecar.istio.io/inject: "true"
    spec:
      imagePullSecrets: 
      - name: aspen-mesh-pull-secret
      containers:
      - name: traffic-generator
        image: quay.io/aspenmesh/demo:traffic-generator-1
        imagePullPolicy: IfNotPresent
