samples/aspenmesh/ratings-mtls-disable.yaml
---
apiVersion: networking.istio.io/v1alpha3
kind: DestinationRule
metadata:
  name: ratings
spec:
  host: "ratings.default.svc.cluster.local"
  trafficPolicy:
    tls:
      mode: DISABLE
---
