samples/aspenmesh/ratings-slowdown-vs.yaml
##################################################################################################
# Ratings Slow-Down Rule
##################################################################################################
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: ratings-delay
spec:
  hosts:
    - ratings.default.svc.cluster.local
  http:
    - fault:
        delay:
          percentage:
            value: 100
          fixedDelay: 500ms
      route:
        - destination:
            host: ratings.default.svc.cluster.local
---
